// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/typography/demo/basic.md correctly 1`] = `
<article
  class="ant-typography"
>
  <h1
    class="ant-typography"
  >
    Introduction
  </h1>
  <div
    class="ant-typography"
  >
    In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
  </div>
  <div
    class="ant-typography"
  >
    After massive project practice and summaries, Ant Design, a design language for background applications, is refined by Ant UED Team, which aims to
    <span
      class="ant-typography"
    >
      <strong>
        uniform the user interface specs for internal background projects, lower the unnecessary cost of design differences and implementation and liberate the resources of design and front-end development
      </strong>
    </span>
    .
  </div>
  <h2
    class="ant-typography"
  >
    Guidelines and Resources
  </h2>
  <div
    class="ant-typography"
  >
    We supply a series of design principles, practical patterns and high quality design resources (
    <span
      class="ant-typography"
    >
      <code>
        Sketch
      </code>
    </span>
     and 
    <span
      class="ant-typography"
    >
      <code>
        Axure
      </code>
    </span>
    ), to help people create their product prototypes beautifully and efficiently.
  </div>
  <div
    class="ant-typography"
  >
    <ul>
      <li>
        <a
          href="/docs/spec/proximity"
        >
          Principles
        </a>
      </li>
      <li>
        <a
          href="/docs/pattern/navigation"
        >
          Patterns
        </a>
      </li>
      <li>
        <a
          href="/docs/resource/download"
        >
          Resource Download
        </a>
      </li>
    </ul>
  </div>
  <div
    class="ant-typography"
  >
    Press 
    <span
      class="ant-typography"
    >
      <kbd>
        Esc
      </kbd>
    </span>
     to exit...
  </div>
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />
  <h1
    class="ant-typography"
  >
    介绍
  </h1>
  <div
    class="ant-typography"
  >
    蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
  </div>
  <div
    class="ant-typography"
  >
    随着商业化的趋势，越来越多的企业级产品对更好的用户体验有了进一步的要求。带着这样的一个终极目标，我们（蚂蚁金服体验技术部）经过大量的项目实践和总结，逐步打磨出一个服务于企业级产品的设计体系 Ant Design。基于
    <span
      class="ant-typography"
    >
      <mark>
        『确定』和『自然』
      </mark>
    </span>
    的设计价值观，通过模块化的解决方案，降低冗余的生产成本，让设计者专注于
    <span
      class="ant-typography"
    >
      <strong>
        更好的用户体验
      </strong>
    </span>
    。
  </div>
  <h2
    class="ant-typography"
  >
    设计资源
  </h2>
  <div
    class="ant-typography"
  >
    我们提供完善的设计原则、最佳实践和设计资源文件（
    <span
      class="ant-typography"
    >
      <code>
        Sketch
      </code>
    </span>
     和
    <span
      class="ant-typography"
    >
      <code>
        Axure
      </code>
    </span>
    ），来帮助业务快速设计出高质量的产品原型。
  </div>
  <div
    class="ant-typography"
  >
    <ul>
      <li>
        <a
          href="/docs/spec/proximity"
        >
          设计原则
        </a>
      </li>
      <li>
        <a
          href="/docs/pattern/navigation"
        >
          设计模式
        </a>
      </li>
      <li>
        <a
          href="/docs/resource/download"
        >
          设计资源
        </a>
      </li>
    </ul>
  </div>
  <div
    class="ant-typography"
  >
    按
    <span
      class="ant-typography"
    >
      <kbd>
        Esc
      </kbd>
    </span>
    键退出阅读……
  </div>
</article>
`;

exports[`renders ./components/typography/demo/ellipsis.md correctly 1`] = `
Array [
  <div
    class="ant-typography ant-typography-ellipsis"
  >
    Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team.
  </div>,
  <div
    class="ant-typography ant-typography-ellipsis"
  >
    Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team.
  </div>,
]
`;

exports[`renders ./components/typography/demo/ellipsis-debug.md correctly 1`] = `
Array [
  <button
    aria-checked="true"
    class="ant-switch ant-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    >
      Long Text
    </span>
  </button>,
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    />
  </button>,
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    />
  </button>,
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    />
  </button>,
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="left:0%;right:auto;width:0%"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="10"
      aria-valuemin="1"
      aria-valuenow="1"
      class="ant-slider-handle"
      role="slider"
      style="left:0%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="ant-slider-mark"
    />
  </div>,
  <div
    class="ant-typography ant-typography-ellipsis"
  >
    Ant Design, a design language for background applications, is refined by Ant UED Team. This is a nest sample 
    <span
      class="ant-typography"
    >
      <code>
        <del>
          <strong>
            Test
          </strong>
        </del>
      </code>
    </span>
     case. Bnt Design, a design language for background applications, is refined by Ant UED Team. Cnt Design, a design language for background applications, is refined by Ant UED Team. Dnt Design, a design language for background applications, is refined by Ant UED Team. Ent Design, a design language for background applications, is refined by Ant UED Team.
  </div>,
  <p>
    2333
    <span
      class="ant-typography ant-typography-ellipsis"
    >
      2333
    </span>
    2333
  </p>,
]
`;

exports[`renders ./components/typography/demo/interactive.md correctly 1`] = `
Array [
  <div
    class="ant-typography"
  >
    This is an editable text.
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    Custom Edit icon and replace tooltip text.
    <div
      aria-label="click to edit text"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
      tabindex="0"
    >
      <span
        aria-label="highlight"
        class="anticon anticon-highlight"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="highlight"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M957.6 507.4L603.2 158.2a7.9 7.9 0 00-11.2 0L353.3 393.4a8.03 8.03 0 00-.1 11.3l.1.1 40 39.4-117.2 115.3a8.03 8.03 0 00-.1 11.3l.1.1 39.5 38.9-189.1 187H72.1c-4.4 0-8.1 3.6-8.1 8V860c0 4.4 3.6 8 8 8h344.9c2.1 0 4.1-.8 5.6-2.3l76.1-75.6 40.4 39.8a7.9 7.9 0 0011.2 0l117.1-115.6 40.1 39.5a7.9 7.9 0 0011.2 0l238.7-235.2c3.4-3 3.4-8 .3-11.2zM389.8 796.2H229.6l134.4-133 80.1 78.9-54.3 54.1zm154.8-62.1L373.2 565.2l68.6-67.6 171.4 168.9-68.6 67.6zM713.1 658L450.3 399.1 597.6 254l262.8 259-147.3 145z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    Hide Edit tooltip.
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    This is an editable text with limited length.
    <div
      aria-label="Edit"
      class="ant-typography-edit"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
      tabindex="0"
    >
      <span
        aria-label="edit"
        class="anticon anticon-edit"
        role="button"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="edit"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    This is a copyable text.
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    Replace copy text.
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    Custom Copy icon and replace tooltips text.
    <div
      aria-label="click here"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
      tabindex="0"
    >
      <span
        aria-label="smile"
        class="anticon anticon-smile"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="smile"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    class="ant-typography"
  >
    Hide Copy tooltips.
    <div
      aria-label="Copy"
      class="ant-typography-copy"
      role="button"
      style="border:0;background:transparent;padding:0;line-height:inherit;display:inline-block"
      tabindex="0"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </div>,
]
`;

exports[`renders ./components/typography/demo/paragraph-debug.md correctly 1`] = `
Array [
  <h1
    class="ant-typography"
  >
    Introduction
  </h1>,
  <div
    class="ant-typography"
  >
    In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development.
  </div>,
  <div
    class="ant-typography"
  >
    After massive project practice and summaries, Ant Design, a design language for background applications, is refined by Ant UED Team, which aims to
    <span
      class="ant-typography"
    >
      <strong>
        uniform the user interface specs for internal background projects, lower the unnecessary cost of design differences and implementation and liberate the resources of design and front-end development
      </strong>
    </span>
    .
  </div>,
  <h2
    class="ant-typography"
  >
    Guidelines and Resources
  </h2>,
  <div
    class="ant-typography"
  >
    We supply a series of design principles, practical patterns and high quality design resources (
    <span
      class="ant-typography"
    >
      <code>
        Sketch
      </code>
    </span>
     and 
    <span
      class="ant-typography"
    >
      <code>
        Axure
      </code>
    </span>
    ), to help people create their product prototypes beautifully and efficiently.
  </div>,
  <div
    class="ant-typography"
  >
    <ul>
      <li>
        <a
          href="/docs/spec/proximity"
        >
          Principles
        </a>
      </li>
      <li>
        <a
          href="/docs/pattern/navigation"
        >
          Patterns
        </a>
      </li>
      <li>
        <a
          href="/docs/resource/download"
        >
          Resource Download
        </a>
      </li>
    </ul>
  </div>,
  <h1
    class="ant-typography"
    id="intro"
  >
    介绍
  </h1>,
  <div
    class="ant-typography"
  >
    蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
  </div>,
  <div
    class="ant-typography"
  >
    随着商业化的趋势，越来越多的企业级产品对更好的用户体验有了进一步的要求。带着这样的一个终极目标，我们（蚂蚁金服体验技术部）经过大量的项目实践和总结，逐步打磨出一个服务于企业级产品的设计体系 Ant Design。基于
    <span
      class="ant-typography"
    >
      <mark>
        『确定』和『自然』
      </mark>
    </span>
    的设计价值观，通过模块化的解决方案，降低冗余的生产成本，让设计者专注于
    <span
      class="ant-typography"
    >
      <strong>
        更好的用户体验
      </strong>
    </span>
    。
  </div>,
  <h2
    class="ant-typography"
  >
    设计资源
  </h2>,
  <div
    class="ant-typography"
  >
    我们提供完善的设计原则、最佳实践和设计资源文件（
    <span
      class="ant-typography"
    >
      <code>
        Sketch
      </code>
    </span>
     和
    <span
      class="ant-typography"
    >
      <code>
        Axure
      </code>
    </span>
    ），来帮助业务快速设计出高质量的产品原型。
  </div>,
  <div
    class="ant-typography"
  >
    <ul>
      <li>
        <a
          href="/docs/spec/proximity"
        >
          设计原则
        </a>
      </li>
      <li>
        <a
          href="/docs/pattern/navigation"
        >
          设计模式
        </a>
      </li>
      <li>
        <a
          href="/docs/resource/download"
        >
          设计资源
        </a>
      </li>
    </ul>
  </div>,
  <div
    class="ant-typography"
  >
    <ul>
      <li>
        I am an unordered item
      </li>
      <li>
        I am an unordered item with an ordered sublist
        <ol>
          <li>
            I am ordered
          </li>
        </ol>
        <ul>
          <li>
            I am unordered
          </li>
        </ul>
      </li>
    </ul>
    <ol>
      <li>
        Ordered list item with unordered sublist
        <ul>
          <li>
            I am unordered!
          </li>
          <li>
            I am also unordered!
          </li>
        </ul>
      </li>
    </ol>
  </div>,
]
`;

exports[`renders ./components/typography/demo/suffix.md correctly 1`] = `
Array [
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="left:0%;right:auto;width:0%"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="10"
      aria-valuemin="1"
      aria-valuenow="1"
      class="ant-slider-handle"
      role="slider"
      style="left:0%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="ant-slider-mark"
    />
  </div>,
  <div
    class="ant-typography ant-typography-ellipsis"
    title="To be, or not to be, that is a question: Whether it is nobler in the mind to suffer. The slings and arrows of outrageous fortune Or to take arms against a sea of troubles, And by opposing end them? To die: to sleep; No more; and by a sleep to say we end The heart-ache and the thousand natural shocks That flesh is heir to, 'tis a consummation Devoutly to be wish'd. To die, to sleep To sleep- perchance to dream: ay, there's the rub! For in that sleep of death what dreams may come When we have shuffled off this mortal coil, Must give us pause. There 's the respect That makes calamity of so long life--William Shakespeare"
  >
    To be, or not to be, that is a question: Whether it is nobler in the mind to suffer. The slings and arrows of outrageous fortune Or to take arms against a sea of troubles, And by opposing end them? To die: to sleep; No more; and by a sleep to say we end The heart-ache and the thousand natural shocks That flesh is heir to, 'tis a consummation Devoutly to be wish'd. To die, to sleep To sleep- perchance to dream: ay, there's the rub! For in that sleep of death what dreams may come When we have shuffled off this mortal coil, Must give us pause. There 's the respect That makes calamity of so long life--William Shakespeare
  </div>,
]
`;

exports[`renders ./components/typography/demo/text.md correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography"
    >
      Ant Design
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography ant-typography-secondary"
    >
      Ant Design
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography ant-typography-success"
    >
      Ant Design
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography ant-typography-warning"
    >
      Ant Design
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography ant-typography-danger"
    >
      Ant Design
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography ant-typography-disabled"
    >
      Ant Design
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography"
    >
      <mark>
        Ant Design
      </mark>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography"
    >
      <code>
        Ant Design
      </code>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography"
    >
      <kbd>
        Ant Design
      </kbd>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography"
    >
      <u>
        Ant Design
      </u>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography"
    >
      <del>
        Ant Design
      </del>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <span
      class="ant-typography"
    >
      <strong>
        Ant Design
      </strong>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <a
      class="ant-typography"
      href="https://ant.design"
      rel="noopener noreferrer"
      target="_blank"
    >
      Ant Design
    </a>
  </div>
</div>
`;

exports[`renders ./components/typography/demo/title.md correctly 1`] = `
Array [
  <h1
    class="ant-typography"
  >
    h1. Ant Design
  </h1>,
  <h2
    class="ant-typography"
  >
    h2. Ant Design
  </h2>,
  <h3
    class="ant-typography"
  >
    h3. Ant Design
  </h3>,
  <h4
    class="ant-typography"
  >
    h4. Ant Design
  </h4>,
  <h5
    class="ant-typography"
  >
    h5. Ant Design
  </h5>,
]
`;
